--- a/netlify.toml
+++ b/netlify.toml
@@ -1,14 +1,15 @@
-# Place this at your repo root
-# (keep your existing [build] section if you already have one)
-
+# --- Build settings ---
 [build]
-  # if you have a specific publish dir, keep it; otherwise remove this line
+  # If you have a specific publish dir, keep it; otherwise remove this line
   # publish = "public"
+  edge_functions = "netlify/edge-functions"
 
+# --- Edge Functions directory ---
 [edge_functions]
   directory = "netlify/edge-functions"
 
-# Protect only the homepage and /tools/*
+# --- Route mappings ---
+# Protect homepage and /tools/*
 [[edge_functions]]
   path = "/"
   function = "protect"
@@ -17,15 +18,12 @@
   path = "/tools/*"
   function = "protect"
 
-# (Optional) A logout path
+# Optional logout route
 [[edge_functions]]
   path = "/__logout"
   function = "protect"
 
-
+# API route
 [[edge_functions]]
-path = "/api/fetch-metadata"
-function = "fetch-metadata"
-
-[build]
-  edge_functions = "netlify/edge-functions"
+  path = "/api/fetch-metadata"
+  function = "fetch-metadata"
